# ldif

./: TODO  TODO.org  ldif.cabal  run_tests.sh
src/: diffLDIF.hs  ldif2html.hs  ldifmodify.hs  ldifparse.hs  ldifundo.hs
src/Text/: LDIF.hs
src/Text/LDIF/: Apply.hs  Consts.hs  Diff.hs  Parser.hs  Preproc.hs  Printer.hs  Proc.hs  Tree.hs  Types.hs  Undo.hs  Utils.hs
test/: unitTests.hs
tests/: TestMain.hs
tests/data/: OK_dnescaped01.content.ldif
tests/ldifmodify/: add.ldif  base.ldif  base4del.ldif  del.ldif  mod_add.ldif
