name:            ldif
version:         0.1
license:         BSD3
author:          Radoslav Dorcik <radoslav.dorcik@gmail.com>
maintainer:      Radoslav Dorcik <radoslav.dorcik@gmail.com>
description:     LDIF parser 
synopsis:        Directory LDIF format parser
category:        Text
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.4

flag testing
  description: Enable Debugging things like QuickCheck properties, etc.
  default: False

library
  build-depends:   ghc,
                   base         == 4.*,
                   filepath,
                   haskell98,
                   parsec       == 2.1.0.*,
                   HUnit        >= 1.2,
                   Cabal        >= 1.5 && < 1.7
  hs-source-dirs:  src
  extensions:      CPP, PatternGuards
  ghc-options:     -Wall

  Exposed-modules:
        Text.LDIF

executable unitTests
  main-is: unitTests.hs
  hs-source-dirs:  test, src
  extensions:      CPP, PatternGuards, DeriveDataTypeable 

