Name:            ldif
Version:         1.0.0
License:         BSD3
License-File:    LICENSE
Synopsis:        The LDAP Data Interchange Format (LDIF) tools 
Author:          Radoslav Dorcik <radoslav.dorcik@gmail.com>
Homepage:        http://rampa.sk/static/ldif.html
Maintainer:      radoslav.dorcik@gmail.com
Description:     
 LDIF files parser implementation using Parsec.
 The LDAP Data Interchange Format (LDIF) is defined by RFC 2849.
 .
 Current implementation is unfinished and need to be enhanced
 for base64 encoded values and various DN escaping. 
 .
 Package includes following command line tools:
 .
 - diffLDIF - calculates change (delta) LDIF between two content LDIF files.
 .
 - ldif2html - produces HTML/browsable LDIF file. 
 .
 - ldifmodify - apply operations from change (delta) LDIF on content LDIF (similar to ldapmodify)
 .
Category:        Text
Stability:       experimental
Build-Type:      Simple
Cabal-Version:   >= 1.6
Extra-Source-Files:
    run_tests.sh
    TODO.org
    doc/rfc2253.txt
    doc/rfc2849.txt
    tests/TestMain.hs
    tests/data/OK_diff01.content.ldif
    tests/data/OK_diff02.content.ldif
    tests/data/OK_multivalue.modify.ldif
    tests/data/OK_simple01.content.ldif
    tests/data/OK_simple01.modify.ldif
    tests/data/OK_simple02.content.ldif
    tests/data/OK_simple03.modify.ldif
    tests/data/OK_simpleComment.modify.ldif
    tests/data/OK_simpleWrap.modify.ldif
    tests/data/OK_dnescaped01.content.ldif
    
Source-Repository head
  type:     darcs
  location: http://patch-tag.com/r/dixiecko/ldif

flag test
  description: Build test program.
  default:     False

Library
  Build-Depends:   base         < 5,
                   filepath,
                   bytestring,
                   containers   <= 0.3.0.0,
                   cmdargs      >= 0.2,
                   directory,
                   rosezipper   >= 0.2,
                   parsec       >= 3.1.0
  Hs-Source-Dirs:  src
  Extensions:      CPP, PatternGuards
  Ghc-Options:      -Wall -fno-warn-orphans

  Exposed-modules:
        Text.LDIF
        Text.LDIF.Types
        Text.LDIF.Parser
        Text.LDIF.Printer
        Text.LDIF.Utils
        Text.LDIF.Diff
        Text.LDIF.Apply
        Text.LDIF.Consts
        Text.LDIF.Tree

Executable diffLDIF
  Hs-Source-Dirs:  src
  Main-Is:         diffLDIF.hs
  if flag(test)
    Buildable:     False

Executable ldif2html
  Hs-Source-Dirs:  src
  Main-Is:         ldif2html.hs
  if flag(test)
    Buildable:     False

Executable ldifmodify
  Hs-Source-Dirs:  src
  Main-Is:         ldifmodify.hs
  if flag(test)
    Buildable:     False

Executable ldifparse
  Hs-Source-Dirs:  src
  Main-Is:         ldifparse.hs
  if !flag(test)
    Buildable:     False

Test-Suite ldif-test
    type:           exitcode-stdio-1.0
    Main-Is:        TestMain.hs
    Build-Depends:  base, HUnit == 1.2.*
    Hs-Source-Dirs:  src, tests

